# clover_ros2_pkgs

./: .gitmodules  Dockerfile  LICENSE  Makefile  README.md  docker-bake.hcl  k8.daemonset.clover.nightly.yaml  k8.daemonset.clover.yaml
.github/workflows/: remove_container_on_close.yaml  update-image-dev.yml  update-image.yml
clover_ros2/: CMakeLists.txt  package.xml
clover_ros2/config/: notify_params.yaml
clover_ros2/launch/: clover.launch.xml  led.launch  led.launch.xml  mavros_led_test.launch.xml  notify_params.yaml  simple_offboard.launch.xml
clover_ros2/src/: led.cpp  mavros_led.cpp  simple_offboard.cpp
clover_ros2/srv/: SetLEDEffect.srv
clover_ros2_msgs/: CMakeLists.txt  package.xml
docker/: kubernetes.yaml
led_msgs/: CMakeLists.txt  package.xml
led_msgs/msg/: LEDState.msg
led_msgs/srv/: SetLED.srv
led_msgs_test/: package.xml  setup.cfg  setup.py
led_msgs_test/led_msgs_test/: sim.py
ws281x/: CMakeLists.txt  package.xml
ws281x/src/: ws281x_node.cpp
ws281x_test/: package.xml  setup.cfg  setup.py
ws281x_test/launch/: test.launch.xml
ws281x_test/ws281x_test/: test.py
