<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clover_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 Port of the Clover Package</description>
  <maintainer email="mickey.li@bristol.ac.uk">Mickey Li</maintainer>

  <license>MIT</license>

  <url type="website">https://clover.coex.tech/</url>
  <author email="okalachev@gmail.com">Oleg Kalachev</author>
  <author email="urpylka@gmail.com">Artem Smirnov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>led_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>ws281x</depend>
  <depend>vl53l1x</depend>
  <depend>mavros_msgs</depend>

  <exec_depend>simple_offboard</exec_depend>
  <!-- <depend>mavros_extras</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
