<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ws281x</name>
  <version>0.0.9</version>
  <description>ROS node for rpi_ws281x LED strip driver (ROS2 Port)</description>
  <maintainer email="sfalexrog@gmail.com">sfalexrog</maintainer>
  <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/CopterExpress/ros_led</url>

  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>led_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
